[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adss"
version = "1.38"
description = "Astronomical Data Smart System"
readme = "README.md"
authors = [{ name = "Gustavo Schwarz", email = "gustavo.b.schwarz@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
  "pyarrow<14; python_version < '3.9'",
  "httpx<1; python_version < '3.9'",
  "httpx>=0.23; python_version >= '3.9'",
  "requests",
  "astropy<6; python_version < '3.10'",
  "astropy>=5.0; python_version >= '3.10'"
]
classifiers = [
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/schwarzam/adss"

[tool.setuptools.packages.find]
where = ["."]

# python -m build
# twine check dist/*
# twine upload dist/*

[project.optional-dependencies]
# dependências usadas para rodar testes
test = [
  "pytest>=7.0",
]

# dependências de desenvolvimento (linters / formatters / ferramentas CI)
dev = [
  "black",
  "ruff"
]